--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="pdf/photo.jpeg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Gaurav Kumar</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="pdf/photo.jpeg" />
+
+    <!-- Open Graph (for WhatsApp, LinkedIn, Facebook) -->
+    <meta property="og:title" content="Gaurav Kumar" />
+    <meta property="og:description" content="Portfolio website of Gaurav Kumar" />
+    <meta property="og:image" content="https://sharmag02.netlify.app/pdf/photo.jpeg" />
+    <meta property="og:url" content="https://sharmag02.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
-  </head>
-  <body>
+    <meta name="twitter:title" content="Gaurav Kumar" />
+    <meta name="twitter:description" content="Portfolio website of Gaurav Kumar" />
+    <meta name="twitter:image" content="https://sharmag02.netlify.app/pdf/photo.jpeg" />
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/app/main.tsx"></script>
-  </body>
+</body>
 </html>
